--- a/01 Wrangling specimen occurrence data.Rmd
+++ b/01 Wrangling specimen occurrence data.Rmd
@@ -5,6 +5,13 @@ date: "2023-03-06"
 output: html_document
 ---
 
+---
+title: "Wrangling specimen occurrence data"
+author: "Alice Armstrong"
+date: "2023-03-06"
+output: html_document
+---
+
 This script takes georeferenced data for Nile crcodiles and wrangles these for later analysis.
 
 
