--- a/05 Land use extractions.Rmd
+++ b/05 Land use extractions.Rmd
@@ -3,6 +3,10 @@ title: "Land use extractions"
 author: "Alice Armstrong"
 date: "2023-03-09"
 output: html_document
+
+This script takes extracts various types of land use data from the error polygons of the specimens.
+
+
 ---
 #Load packages#
 ```{r}
