--- a/07 Areas of overlap between historic and current ranges.Rmd
+++ b/07 Areas of overlap between historic and current ranges.Rmd
@@ -126,3 +126,8 @@ overlaps
 ```{r}
 write.csv(overlaps,"overlaps")
 ```
+
+#calculate percentage overlap#
+```{r}
+overlap_percent<-overlaps %>% dplyr::summarise(percent = sum(overlap)/n() *100)
+```
