--- a/07 Areas of overlap between historic and current ranges.Rmd
+++ b/07 Areas of overlap between historic and current ranges.Rmd
@@ -85,7 +85,7 @@ overlap <- st_intersection(nhm, newIUCN)
 ```{r}
 convex<-ggplot(baseMap) +
   geom_sf() +
-  geom_sf(fill = "royalblue2", colour = "royalblue2",
+  geom_sf(fill = "blue", colour = "blue",
           data = nhm, show.legend = FALSE) +
   geom_sf(alpha = 0.5, fill = "#2c7fb8", colour = "#2c7fb8",
           data = newIUCN, show.legend = FALSE) +
