--- a/01 Wrangling specimen occurrence data.Rmd
+++ b/01 Wrangling specimen occurrence data.Rmd
@@ -47,14 +47,14 @@ NHM3<-subset(NHM2, Keep == "Y")
 #Rename NHM and GBIF data, and limt NHM column names to match GBIF#
 ```{r}
 fullNHM<-NHM3%>%select ('Date','Long', 'Lat','Extent', 'Cer')
-nrow(fullNHM)
 fullGBIF<-GBIF2
-nrow(fullGBIF)
+
 ```
 
 #Merge datasets#
 ```{r}
 fulldata<-rbind(fullNHM,fullGBIF)
+nrow(fulldata)
 ```
 
 
@@ -80,5 +80,5 @@ fulldata<-fulldata%>% filter(Date<=1999)
 
 #Write file#
 ```{r}
-write.csv(GBIF_NHM, "specimen_occurrence_data",row.names = T)
+write.csv(fulldata, "full_specimin_localility",row.names = T)
 ```
